--- a/Amazon.html
+++ b/Amazon.html
@@ -68,12 +68,6 @@
     <img src="portfolio icons-05.png" alt="Drizly"
     style="width:100%;">
   </a>
-  <a href="MFA.html" class="hover-container">
-    <img src="mfa5.gif" alt="Drizly"
-    style="width:100%;">
-    <img src="portfolio icons-06.png" alt="Drizly"
-    style="width:100%;">
-  </a>
 <a href="LondonPub.html" class="hover-container">
   <img src="lp2.gif" alt="London Pub GIF"
     style="width:100%;">
@@ -84,6 +78,12 @@
     <img src="stubhub2.gif" alt="Stubhub Gif"
     style="width:100%;">
   <img src="portfolio icons-08.png" alt="Drizly"
+    style="width:100%;">
+</a>
+<a href="DesignForGood.html" class="hover-container">
+  <img src="buddyclub.gif" alt="Design for Good GIF"
+    style="width:100%;">
+  <img src="portfolio icons-06.png" alt="Design For Good"
     style="width:100%;">
 </a>
 <a href="ArtDesign.html" class="hover-container">
