--- a/DesignForGood.html
+++ b/DesignForGood.html
@@ -26,16 +26,16 @@
 </div>
 </div>
 <h2><a href="StubHub.html">&lt; &nbsp; </a> Design for Good <a href="ArtDesign.html">&nbsp; &gt;</a></h2>
-<h3>The Challenge: Introduce Amazon Dash Buttons.<br>
-  The Solution:  Show people the wide range of brands they can get sent to
-their home with just the click of a button.</h3>
+<h3>I believe there is a strong need for people with an advertising and design background
+  in the nonprofit sector. Select one of the nonprofits below to see how I have
+  worked with the organization to expand their cause.</h3>
 <br></br>
   <div id="wrapper">
     <p><a class="button" href="#popup1"><img src="sub icons-03.png" alt="Art1"
     style="width:400px;"></a></p>
-    <p><a class="button" href="#popup5"><img src="sub icons-04.png" alt="Art3"
+    <p><a class="button" href="#popup12"><img src="sub icons-04.png" alt="Art3"
     style="width:400px;"></a></p>
-    <p><a class="button" href="#popup3"><img src="sub icons-05.png" alt="Art5"
+    <p><a class="button" href="#popup7"><img src="sub icons-05.png" alt="Art5"
     style="width:400px;"></a></p>
   </div>
   <br></br>
@@ -52,12 +52,6 @@ their home with just the click of a button.</h3>
           <img src="portfolio icons-05.png" alt="Partners Global Icon"
           style="width:100%;">
         </a>
-        <a href="MFA.html" class="hover-container">
-          <img src="mfa5.gif" alt="Drizly"
-          style="width:100%;">
-          <img src="portfolio icons-06.png" alt="Drizly"
-          style="width:100%;">
-        </a>
       <a href="LondonPub.html" class="hover-container">
         <img src="lp2.gif" alt="London Pub GIF"
           style="width:100%;">
@@ -68,6 +62,12 @@ their home with just the click of a button.</h3>
       <img src="stubhub2.gif" alt="Stubhub Gif"
           style="width:100%;">
         <img src="portfolio icons-08.png" alt="Drizly Icon"
+          style="width:100%;">
+      </a>
+      <a href="ArtDesign.html" class="hover-container">
+        <img src="art2.gif" alt="Art GIF"
+          style="width:100%;">
+        <img src="portfolio icons-03.png" alt="Art Icon"
           style="width:100%;">
       </a>
       </div>
@@ -81,7 +81,6 @@ their home with just the click of a button.</h3>
         <img src="BuddyClubSlideShow-01.png" alt="art1"
         style="width:100%;">
           <a class="close" href="#">&times;</a>
-          <a class="leftarrow" href="#popup3">&#8249;</a>
           <a class="rightarrow" href="#popup2">&#8250;</a>
       </div>
   </div>
@@ -100,52 +99,128 @@ their home with just the click of a button.</h3>
         style="width:100%;">
           <a class="close" href="#">&times;</a>
           <a class="leftarrow" href="#popup2">&#8249;</a>
-          <a class="rightarrow" href="#popup1">&#8250;</a>
+          <a class="rightarrow" href="#popup4">&#8250;</a>
       </div>
   </div>
   <div id="popup4" class="overlay">
       <div class="popup">
-        <img src="BuddyClubSlideShow-02.png" alt="art1"
+        <img src="BuddyClubSlideShow-04.png" alt="art1"
         style="width:100%;">
           <a class="close" href="#">&times;</a>
-          <a class="leftarrow" href="#popup6">&#8249;</a>
+          <a class="leftarrow" href="#popup3">&#8249;</a>
           <a class="rightarrow" href="#popup5">&#8250;</a>
       </div>
   </div>
   <div id="popup5" class="overlay">
       <div class="popup">
-        <img src="Survivor-01.png" alt="art1"
+        <img src="BuddyClubSlideShow-05.png" alt="art1"
         style="width:100%;">
           <a class="close" href="#">&times;</a>
-          <a class="leftarrow" href="#popup8">&#8249;</a>
+          <a class="leftarrow" href="#popup4">&#8249;</a>
           <a class="rightarrow" href="#popup6">&#8250;</a>
       </div>
   </div>
   <div id="popup6" class="overlay">
       <div class="popup">
-        <img src="Survivor-02.png" alt="art3"
+        <img src="BuddyClubSlideShow-06.png" alt="art3"
         style="width:100%;">
           <a class="close" href="#">&times;</a>
           <a class="leftarrow" href="#popup5">&#8249;</a>
-          <a class="rightarrow" href="#popup7">&#8250;</a>
       </div>
   </div>
   <div id="popup7" class="overlay">
       <div class="popup">
-        <img src="Survivor-03.png" alt="art5"
+        <img src="Chance2Dance-01.png" alt="art5"
         style="width:100%;">
           <a class="close" href="#">&times;</a>
-          <a class="leftarrow" href="#popup6">&#8249;</a>
           <a class="rightarrow" href="#popup8">&#8250;</a>
       </div>
   </div>
   <div id="popup8" class="overlay">
       <div class="popup">
-        <img src="Survivor-04.png" alt="art5"
+        <img src="Chance2Dance-02.png" alt="art5"
         style="width:100%;">
           <a class="close" href="#">&times;</a>
           <a class="leftarrow" href="#popup7">&#8249;</a>
-          <a class="rightarrow" href="#popup5">&#8250;</a>
+          <a class="rightarrow" href="#popup9">&#8250;</a>
+      </div>
+  </div>
+  <div id="popup9" class="overlay">
+      <div class="popup">
+        <img src="Chance2Dance-03.png" alt="art5"
+        style="width:100%;">
+          <a class="close" href="#">&times;</a>
+          <a class="leftarrow" href="#popup8">&#8249;</a>
+          <a class="rightarrow" href="#popup10">&#8250;</a>
+      </div>
+  </div>
+  <div id="popup10" class="overlay">
+      <div class="popup">
+        <img src="Chance2Dance-04.png" alt="art5"
+        style="width:100%;">
+          <a class="close" href="#">&times;</a>
+          <a class="leftarrow" href="#popup9">&#8249;</a>
+          <a class="rightarrow" href="#popup11">&#8250;</a>
+      </div>
+  </div>
+  <div id="popup11" class="overlay">
+      <div class="popup">
+        <img src="Chance2Dance-05.png" alt="art5"
+        style="width:100%;">
+          <a class="close" href="#">&times;</a>
+          <a class="leftarrow" href="#popup10">&#8249;</a>
+      </div>
+  </div>
+  <div id="popup12" class="overlay">
+      <div class="popup">
+        <img src="Survivor-01.png" alt="art5"
+        style="width:100%;">
+          <a class="close" href="#">&times;</a>
+          <a class="rightarrow" href="#popup13">&#8250;</a>
+      </div>
+  </div>
+  <div id="popup13" class="overlay">
+      <div class="popup">
+        <img src="Survivor-02.png" alt="art5"
+        style="width:100%;">
+          <a class="close" href="#">&times;</a>
+          <a class="leftarrow" href="#popup12">&#8249;</a>
+          <a class="rightarrow" href="#popup14">&#8250;</a>
+      </div>
+  </div>
+  <div id="popup14" class="overlay">
+      <div class="popup">
+        <img src="Survivor-03.png" alt="art5"
+        style="width:100%;">
+          <a class="close" href="#">&times;</a>
+          <a class="leftarrow" href="#popup13">&#8249;</a>
+          <a class="rightarrow" href="#popup15">&#8250;</a>
+      </div>
+  </div>
+  <div id="popup15" class="overlay">
+      <div class="popup">
+        <img src="Survivor-04.png" alt="art5"
+        style="width:100%;">
+          <a class="close" href="#">&times;</a>
+          <a class="leftarrow" href="#popup14">&#8249;</a>
+          <a class="rightarrow" href="#popup16">&#8250;</a>
+      </div>
+  </div>
+  <div id="popup16" class="overlay">
+      <div class="popup">
+        <img src="Survivor-05.png" alt="art5"
+        style="width:100%;">
+          <a class="close" href="#">&times;</a>
+          <a class="leftarrow" href="#popup15">&#8249;</a>
+          <a class="rightarrow" href="#popup17">&#8250;</a>
+      </div>
+  </div>
+  <div id="popup17" class="overlay">
+      <div class="popup">
+        <img src="Survivor-06.png" alt="art5"
+        style="width:100%;">
+          <a class="close" href="#">&times;</a>
+          <a class="leftarrow" href="#popup16">&#8249;</a>
       </div>
   </div>
 </body>
