--- a/LondonPub.html
+++ b/LondonPub.html
@@ -27,7 +27,7 @@
   </div>
   </div>
   </div>
-<h2><a href="MFA.html">&lt; &nbsp; </a> Give Your Food a Better Accent <a href="StubHub.html">&nbsp; &gt;</a></h2>
+<h2><a href="PartnersGlobal.html">&lt; &nbsp; </a> Give Your Food a Better Accent <a href="StubHub.html">&nbsp; &gt;</a></h2>
    <h3>The Challenge: London Pub is virtually unknown in the US.<br>
      The Solution: Introduce it as ketchup with a unique flavor and
      quintessentially British personality.</h3>
@@ -40,33 +40,29 @@
      Your browser does not support the video tag.
   </video>
   </div>
-  <div class="imgitem">
-    <img src="LP1.jpg" alt="London Pub Ad 1"
-    style="width:100%;">
-  </div>
-  <div class="imgitem">
-    <img src="LP2.jpg" alt="London Pub Ad 2"
-    style="width:100%;">
-  </div>
-  <div class="imgitem">
-    <img src="LP3.jpg" alt="London Pub Ad 3"
-    style="width:100%;">
-  </div>
-  <div class="imgitem">
-    <img src="LP Drive Thru.jpg" alt="London Pub Drive Thru Sign"
-    style="width:100%;">
-  </div>
-  <div class="imgitem">
-    <img src="LP McD.jpg" alt="London Pub Drive Thru Sign Mockup"
-    style="width:100%;">
-  </div>
-  <img src="LP fries.png" alt="London Pub Fries" style="width:50%;">
-  <div class="imgitem">
-    <img src="LP Snapchat.jpg" alt="London Pub Snapchat"
-    style="width:100%;">
-  </div>
-  <img src="LP packet1.png" alt="London Pub Packet" style="width:50%;">
 </div>
+<div class="stubhubitems">
+    <img src="LP1.jpg" alt="London Pub Ad 1"
+    style="width:30%;">
+    <img src="LP2.jpg" alt="London Pub Ad 2"
+    style="width:30%;">
+    <img src="LP3.jpg" alt="London Pub Ad 3"
+    style="width:30%;">
+</div>
+<br></br>
+<div class="lpitems">
+    <img src="LPMcD.jpg" alt="London Pub Drive Thru"
+    style="width:49%;">
+  <img src="LP fries.png" alt="London Pub Fries"
+   style="width:40%;">
+</div>
+<div class="lpitems">
+    <img src="LP_new.png" alt="London Pub Snapchat"
+    style="width:40%;">
+  <img src="LP packet1.png" alt="London Pub Packet" style="width:49%;">
+</div>
+<br></br>
+<br></br>
 <div class="container">
   <a href="Amazon.html" class="hover-container">
     <img src="amazon2.gif" alt="Amazon GIF"
@@ -80,16 +76,16 @@
     <img src="portfolio icons-05.png" alt="Partners Global Icon"
     style="width:100%;">
   </a>
-  <a href="MFA.html" class="hover-container">
-    <img src="mfa5.gif" alt="Drizly"
-    style="width:100%;">
-    <img src="portfolio icons-06.png" alt="Drizly"
-    style="width:100%;">
-  </a>
 <a href="StubHub.html" class="hover-container">
     <img src="stubhub2.gif" alt="Stubhub Gif"
     style="width:100%;">
   <img src="portfolio icons-08.png" alt="Drizly Icon"
+    style="width:100%;">
+</a>
+<a href="DesignForGood.html" class="hover-container">
+  <img src="buddyclub.gif" alt="Design for Good GIF"
+    style="width:100%;">
+  <img src="portfolio icons-06.png" alt="Design For Good"
     style="width:100%;">
 </a>
 <a href="ArtDesign.html" class="hover-container">
