--- a/PartnersGlobal.html
+++ b/PartnersGlobal.html
@@ -27,7 +27,7 @@
   </div>
   </div>
   </div>
-<h2><a href="Amazon.html">&lt; &nbsp; </a> Link the World <a href="MFA.html">&nbsp; &gt;</a></h2>
+<h2><a href="Amazon.html">&lt; &nbsp; </a> Link the World <a href="LondonPub.html">&nbsp; &gt;</a></h2>
    <h3>The Challenge: Develop a creative concept that brings people together to
      create peace.<br>
      The Solution: Have people pledge to tweet to raise money for global
@@ -41,44 +41,33 @@
      Your browser does not support the video tag.
   </video>
   </div>
-  <div class="imgitem">
-    <img src="PG1.jpg" alt="Parners Global Ad 1"
-    style="width:100%;">
-  </div>
-  <div class="imgitem">
-    <img src="PG2.jpg" alt="Parners Global Ad 2"
-    style="width:100%;">
-  </div>
-  <div class="imgitem">
-    <img src="PG3.jpg" alt="Parners Global Ad 3"
-    style="width:100%;">
-  </div>
-    <img src="Twitter Popup.png" alt="Twitter Popup"
-    style="width:100%;">
-    <div class="imgitem">
-      <img src="Twitter Popup_laptop.jpg" alt="Twitter Popup Laptop"
-      style="width:100%;">
-    </div>
-    <div class="imgitem">
-      <img src="Twitter Popup_mobile.jpg" alt="Twitter Popup Mobile"
-      style="width:100%;">
-    </div>
-    <div class="imgitem">
-      <img src="Mall Ad.jpg" alt="Mall Ad"
-      style="width:100%;">
-    </div>
-    <div class="imgitem">
-      <img src="Mall Ad mockup.jpg" alt="Mall Ad Mockup"
-      style="width:100%;">
-    </div>
-    <div class="imgitem">
-      <img src="Mall Wifi Popup.jpg" alt="Mall Ad Popup"
-      style="width:100%;">
-    </div>
-    <img src="Twitter Emoji.png" alt="Twitter Emoji"
-    style="width:50%;">
 </div>
-<h2>Twitter Emoji</h2>
+<div class="stubhubitems">
+    <img src="PG1.jpg" alt="Parners Global Ad 1"
+    style="width:30%;">
+    <img src="PG2.jpg" alt="Parners Global Ad 2"
+    style="width:30%;">
+    <img src="PG3.jpg" alt="Parners Global Ad 3"
+    style="width:30%;">
+</div>
+<div class="items">
+    <img src="PG laptop.png" alt="Parners Global Ad 3"
+    style="width:90%;">
+</div>
+<div class="lpitems">
+  <img src="MallAd.gif" alt="Mall Ad"
+        style="width:65%;">
+  <img src="WifiPopup-02.png" alt="Mall Wifi"
+       style="width:25%;">
+</div>
+<br></br>
+<div class="lpitems">
+    <img src="Twitter Emoji.png" alt="Twitter Emoji"
+    style="width:25%;">
+    <img src="firsttweet-03.png" alt="First Tweet"
+    style="width:70%;">
+</div>
+<br></br>
 <br></br>
     <div class="container">
       <a href="Amazon.html" class="hover-container">
@@ -87,22 +76,22 @@
         <img src="portfolio icons-04.png" alt="Amazon Icon"
         style="width:100%;">
       </a>
-      <a href="MFA.html" class="hover-container">
-        <img src="mfa5.gif" alt="Drizly"
+      <a href="LondonPub.html" class="hover-container">
+        <img src="lp2.gif" alt="London Pub GIF"
         style="width:100%;">
-        <img src="portfolio icons-06.png" alt="Drizly"
+        <img src="portfolio icons-07.png" alt="London Pub"
         style="width:100%;">
       </a>
-    <a href="LondonPub.html" class="hover-container">
-      <img src="lp2.gif" alt="London Pub GIF"
-        style="width:100%;">
-      <img src="portfolio icons-07.png" alt="London Pub Icon"
-        style="width:100%;">
-    </a>
     <a href="StubHub.html" class="hover-container">
     <img src="stubhub2.gif" alt="Stubhub Gif"
         style="width:100%;">
       <img src="portfolio icons-08.png" alt="Drizly Icon"
+        style="width:100%;">
+    </a>
+    <a href="DesignForGood.html" class="hover-container">
+      <img src="buddyclub.gif" alt="Design for Good GIF"
+        style="width:100%;">
+      <img src="portfolio icons-06.png" alt="Design For Good"
         style="width:100%;">
     </a>
     <a href="ArtDesign.html" class="hover-container">
