--- a/StubHub.html
+++ b/StubHub.html
@@ -27,7 +27,7 @@
   </div>
   </div>
   </div>
-<h2><a href="LondonPub.html">&lt; &nbsp; </a> StubHub Stories <a href="ArtDesign.html">&nbsp; &gt;</a></h2>
+<h2><a href="LondonPub.html">&lt; &nbsp; </a> StubHub Stories <a href="DesignForGood.html">&nbsp; &gt;</a></h2>
  <h3>The Challenge: Create a campaign for a brand you care about.<br>
    The Solution: Show how StubHub can give people experiences they will never forget.</h3>
 <div class="items">
@@ -36,19 +36,15 @@
 </div>
 </div>
 <div class="stubhubitems">
-  <div class="stubhubimg">
-    <img src="stubhub1.jpg" alt="StubHub Example 1"
-    style="width:100%;">
-  </div>
-  <div class="stubhubimg">
-    <img src="stubhub4.gif" alt="StubHub Social Media Post"
-    style="width:100%;">
-  </div>
-  <div class="stubhubimg">
-    <img src="stubhub2.jpg" alt="StubHub Example 2"
-    style="width:100%;">
-  </div>
+    <img src="StubHub_new-02.png" alt="StubHub Example 1"
+    style="width:33%;">
+    <img src="stubhubsocial.gif" alt="StubHub Social Media Post"
+    style="width:33%;">
+    <img src="StubHub_new-01.png" alt="StubHub Example 2"
+    style="width:33%;">
 </div>
+<br></br>
+<br></br>
 <div class="container">
   <a href="Amazon.html" class="hover-container">
     <img src="amazon2.gif" alt="Amazon GIF"
@@ -62,16 +58,16 @@
     <img src="portfolio icons-05.png" alt="Partners Global Icon"
     style="width:100%;">
   </a>
-  <a href="MFA.html" class="hover-container">
-    <img src="mfa5.gif" alt="Drizly"
-    style="width:100%;">
-    <img src="portfolio icons-06.png" alt="Drizly"
-    style="width:100%;">
-  </a>
   <a href="LondonPub.html" class="hover-container">
     <img src="lp2.gif" alt="London Pub GIF"
       style="width:100%;">
     <img src="portfolio icons-07.png" alt="London Pub Icon"
+      style="width:100%;">
+  </a>
+  <a href="DesignForGood.html" class="hover-container">
+    <img src="buddyclub.gif" alt="Design for Good GIF"
+      style="width:100%;">
+    <img src="portfolio icons-06.png" alt="Design For Good"
       style="width:100%;">
   </a>
 <a href="ArtDesign.html" class="hover-container">
