--- a/about.html
+++ b/about.html
@@ -29,7 +29,7 @@
 <img src="aboutpage.jpg" alt="about page photo"
   style="width:31%;height:31%;">
   <h3>I think art is pretty cool.<br></br>
-  So I learned how to <a href="ArtDesign.html"><u>paint</u>.</a><br></br>
+  So I learned how to <a href="Art.html"><u>paint</u>.</a><br></br>
   I think computers are pretty cool.<br></br>
   So I learned how to code <a href="index.html"><u>this website</u>.</a><br></br>
   I think Pixar is pretty cool.<br></br>
