--- a/Art.html
+++ b/Art.html
@@ -355,7 +355,7 @@
   </div>
   <div id="popup21" class="overlay">
       <div class="popup">
-        <img src="art-21.jpg" alt="art21"
+        <img src="art-21.JPG" alt="art21"
         style="width:100%;">
           <a class="close" href="#">&times;</a>
           <a class="leftarrow" href="#popup20">&#8249;</a>
