--- a/Art.html
+++ b/Art.html
@@ -259,7 +259,7 @@
   </div>
   <div id="popup13" class="overlay">
       <div class="popup">
-        <img src="art-13.jpg" alt="art13"
+        <img src="art-13.JPG" alt="art13"
         style="width:100%;">
           <a class="close" href="#">&times;</a>
           <a class="leftarrow" href="#popup12">&#8249;</a>
