--- a/ArtDesign.html
+++ b/ArtDesign.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <link rel="stylesheet" href="pages.css">
   <link rel="icon" href="favicon.png" type="image/gif" sizes="16x16">
-  <title>Amazon</title>
+  <title>Art &amp; Design</title>
 </head>
 <body>
   <div class="header">
