--- a/DesignForGood.html
+++ b/DesignForGood.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <link rel="stylesheet" href="DesignForGood.css">
   <link rel="icon" href="favicon.png" type="image/gif" sizes="16x16">
-  <title>Art &amp; Design</title>
+  <title>Design for Good</title>
 </head>
 <body>
 <div class="header">
