--- a/Amazon.html
+++ b/Amazon.html
@@ -25,7 +25,19 @@
       <a href="resume.html"><b>resume</b></a>
     </div>
   </div>
-  </div>
+  <div class="icons">
+  <a href="mailto:murraym1@bu.edu">
+    <img src="webicon_email.png" alt="email"
+    style="height:26px;">
+  </a>
+  <div class="icon">
+  <a href="https://www.linkedin.com/in/megan-murray-art-director/" target="_blank">
+    <img src="webicon_linkedin.png" alt="linkedin"
+    style="height:27px;">
+  </a>
+</div>
+</div>
+</div>
   </div>
  <h2><a href="ArtDesign.html">&lt; &nbsp; </a> Amazon Dash Button <a href="PartnersGlobal.html">&nbsp; &gt;</a></h2>
    <h3>The Challenge: Introduce Amazon Dash Buttons.<br>
@@ -92,11 +104,6 @@
   <img src="portfolio icons-03.png" alt="Drizly"
     style="width:100%;">
 </a>
-</div>
-<hr>
-<div class="footer">
-  <p>(631) 702-3715<br>
-  <a href="mailto:murraym1@bu.edu">murraym1@bu.edu</a></p>
 </div>
 </body>
 </html>
