--- a/ArtDesign.html
+++ b/ArtDesign.html
@@ -25,10 +25,21 @@
       <a href="resume.html"><b>resume</b></a>
     </div>
   </div>
-  </div>
+  <div class="icons">
+  <a href="mailto:murraym1@bu.edu">
+    <img src="webicon_email.png" alt="email"
+    style="height:26px;">
+  </a>
+  <div class="icon">
+  <a href="https://www.linkedin.com/in/megan-murray-art-director/" target="_blank">
+    <img src="webicon_linkedin.png" alt="linkedin"
+    style="height:27px;">
+  </a>
+</div>
+</div>
+</div>
   </div>
 <h4><a href="index.html">&lt; &nbsp; Back</a></h4>
-<br></br>
 <div class="container">
 <a href="Art.html" class="button">
   <img src="sub icons-01.png" alt="Art"
@@ -39,45 +50,5 @@
   style="width:400px;">
 </a>
 </div>
-<br></br>
-<br></br>
-<br></br>
-<div class="container">
-  <a href="Amazon.html" class="hover-container">
-    <img src="amazon2.gif" alt="Amazon GIF"
-    style="width:100%;">
-    <img src="portfolio icons-04.png" alt="Amazon Icon"
-    style="width:100%;">
-  </a>
-  <a href="PartnersGlobal.html" class="hover-container">
-    <img src="pg2.gif" alt="Drizly"
-    style="width:100%;">
-    <img src="portfolio icons-05.png" alt="Drizly"
-    style="width:100%;">
-  </a>
-<a href="LondonPub.html" class="hover-container">
-  <img src="lp2.gif" alt="London Pub GIF"
-    style="width:100%;">
-  <img src="portfolio icons-07.png" alt="Drizly"
-    style="width:100%;">
-</a>
-<a href="StubHub.html" class="hover-container">
-    <img src="stubhub2.gif" alt="Stubhub Gif"
-    style="width:100%;">
-  <img src="portfolio icons-08.png" alt="Drizly"
-    style="width:100%;">
-</a>
-<a href="DesignForGood.html" class="hover-container">
-  <img src="buddyclub.gif" alt="Design for Good GIF"
-    style="width:100%;">
-  <img src="portfolio icons-06.png" alt="Design For Good"
-    style="width:100%;">
-</a>
-</div>
-<footer>
-  <hr>
-  <p>(631) 702-3715<br>
-  <a href="mailto:murraym1@bu.edu">murraym1@bu.edu</a></p>
-</footer>
 </body>
 </html>
