--- a/DesignForGood.html
+++ b/DesignForGood.html
@@ -7,24 +7,34 @@
   <title>Design for Good</title>
 </head>
 <body>
-<div class="header">
-      <a href="index.html">
-        <img src="logo.png" alt="logo"
-        style="width:150px;height:125px;">
-      </a>
-<div class="home">
-    <a href="index.html"><h1>Megan Murray</h1></a>
-  <div class="menu">
-    <a href="index.html"><b>work</b></a>
+  <div class="header">
+        <a href="index.html">
+          <img src="logo.png" alt="logo"
+          style="width:150px;height:125px;">
+        </a>
+  <div class="home">
+      <a href="index.html"><h1>Megan Murray</h1></a>
+    <div class="menu">
+      <a href="index.html"><b>work</b></a>
+    </div>
+    <div class="menu">
+      <a href="about.html"><b>about</b></a>
+    </div>
+    <div class="menu">
+      <a href="resume.html"><b>resume</b></a>
+    </div>
   </div>
-  <div class="menu">
-    <a href="about.html"><b>about</b></a>
+  <div class="icons">
+  <a href="mailto:murraym1@bu.edu">
+    <img src="webicon_email.png" alt="email"
+    style="height:26px;">
+  </a>
+  <a href="https://www.linkedin.com/in/megan-murray-art-director/" target="_blank">
+    <img src="webicon_linkedin.png" alt="linkedin"
+    style="height:27px;">
+  </a>
   </div>
-  <div class="menu">
-    <a href="resume.html"><b>resume</b></a>
   </div>
-</div>
-</div>
 <h2><a href="StubHub.html">&lt; &nbsp; </a> Design for Good <a href="ArtDesign.html">&nbsp; &gt;</a></h2>
 <h3>Select one of the nonprofits below to see how I have utilized my adveritinsg
   and design background to make a valuable contribution to these organizations.</h3>
@@ -70,11 +80,6 @@
           style="width:100%;">
       </a>
       </div>
-  <hr>
-  <div class="footer">
-    <p>(631) 702-3715<br>
-    <a href="mailto:murraym1@bu.edu">murraym1@bu.edu</a></p>
-  </div>
   <div id="popup1" class="overlay">
       <div class="popup">
         <img src="BuddyClub-01.png" alt="art1"
