--- a/about.html
+++ b/about.html
@@ -7,24 +7,35 @@
   <title>About</title>
 </head>
 <body>
-<div class="header">
-      <a href="index.html">
-        <img src="logo.png" alt="logo"
-        style="width:150px;height:125px;">
-      </a>
-<div class="home">
-    <a href="index.html"><h1>Megan Murray</h1></a>
-  <div class="menu">
-    <a href="index.html"><b>work</b></a>
+  <div class="header">
+        <a href="index.html">
+          <img src="logo.png" alt="logo"
+          style="width:150px;height:125px;">
+        </a>
+  <div class="home">
+      <a href="index.html"><h1>Megan Murray</h1></a>
+    <div class="menu">
+      <a href="index.html"><b>work</b></a>
+    </div>
+    <div class="menu">
+      <a href="about.html"><b>about</b></a>
+    </div>
+    <div class="menu">
+      <a href="resume.html"><b>resume</b></a>
+    </div>
   </div>
-  <div class="menu">
-    <a href="about.html"><b>about</b></a>
+  <div class="icons">
+  <a href="mailto:murraym1@bu.edu">
+    <img src="webicon_email.png" alt="email"
+    style="height:26px;">
+  </a>
+  <a href="https://www.linkedin.com/in/megan-murray-art-director/" target="_blank">
+    <img src="webicon_linkedin.png" alt="linkedin"
+    style="height:27px;">
+  </a>
   </div>
-  <div class="menu">
-    <a href="resume.html"><b>resume</b></a>
   </div>
-</div>
-</div>
+<br></br>
 <div class="container">
 <img src="aboutpage.jpg" alt="about page photo"
   style="width:31%;height:31%;">
@@ -37,10 +48,5 @@
   style="width:100px;height:100px;"></div> my first step to conquering animation.<br></br>
       In the meantime, I do some pretty cool art direction too.<br></br><br></br></h3>
 </div>
-<hr>
-<footer>
-  <p>(631) 702-3715<br>
-  <a href="mailto:murraym1@bu.edu">murraym1@bu.edu</a></p>
-</footer>
 </body>
 </html>
