--- a/Art.html
+++ b/Art.html
@@ -7,24 +7,34 @@
   <title>Art</title>
 </head>
 <body>
-<div class="header">
-      <a href="index.html">
-        <img src="logo.png" alt="logo"
-        style="width:150px;height:125px;">
-      </a>
-<div class="home">
-    <a href="index.html"><h1>Megan Murray</h1></a>
-  <div class="menu">
-    <a href="index.html"><b>work</b></a>
+  <div class="header">
+        <a href="index.html">
+          <img src="logo.png" alt="logo"
+          style="width:150px;height:125px;">
+        </a>
+  <div class="home">
+      <a href="index.html"><h1>Megan Murray</h1></a>
+    <div class="menu">
+      <a href="index.html"><b>work</b></a>
+    </div>
+    <div class="menu">
+      <a href="about.html"><b>about</b></a>
+    </div>
+    <div class="menu">
+      <a href="resume.html"><b>resume</b></a>
+    </div>
   </div>
-  <div class="menu">
-    <a href="about.html"><b>about</b></a>
+  <div class="icons">
+  <a href="mailto:murraym1@bu.edu">
+    <img src="webicon_email.png" alt="email"
+    style="height:26px;">
+  </a>
+  <a href="https://www.linkedin.com/in/megan-murray-art-director/" target="_blank">
+    <img src="webicon_linkedin.png" alt="linkedin"
+    style="height:27px;">
+  </a>
   </div>
-  <div class="menu">
-    <a href="resume.html"><b>resume</b></a>
   </div>
-</div>
-</div>
 <h4><a href="ArtDesign.html">&lt; &nbsp; Back</a></h4>
 <br></br>
   <div id="wrapper">
@@ -108,11 +118,7 @@
           style="width:100%;">
       </a>
       </div>
-  <hr>
-  <div class="footer">
-    <p>(631) 702-3715<br>
-    <a href="mailto:murraym1@bu.edu">murraym1@bu.edu</a></p>
-  </div>
+
   <div id="popup1" class="overlay">
       <div class="popup">
         <img src="art-01.jpg" alt="art1"
