--- a/PartnersGlobal.html
+++ b/PartnersGlobal.html
@@ -25,7 +25,19 @@
       <a href="resume.html"><b>resume</b></a>
     </div>
   </div>
-  </div>
+  <div class="icons">
+  <a href="mailto:murraym1@bu.edu">
+    <img src="webicon_email.png" alt="email"
+    style="height:26px;">
+  </a>
+  <div class="icon">
+  <a href="https://www.linkedin.com/in/megan-murray-art-director/" target="_blank">
+    <img src="webicon_linkedin.png" alt="linkedin"
+    style="height:27px;">
+  </a>
+</div>
+</div>
+</div>
   </div>
 <h2><a href="Amazon.html">&lt; &nbsp; </a> Link the World <a href="LondonPub.html">&nbsp; &gt;</a></h2>
    <h3>The Challenge: Develop a creative concept that brings people together to
@@ -101,10 +113,5 @@
         style="width:100%;">
     </a>
     </div>
-<hr>
-<div class="footer">
-  <p>(631) 702-3715<br>
-  <a href="mailto:murraym1@bu.edu">murraym1@bu.edu</a></p>
-</div>
 </body>
 </html>
