--- a/index.html
+++ b/index.html
@@ -24,7 +24,18 @@
     <a href="resume.html"><b>resume</b></a>
   </div>
 </div>
+<div class="icons">
+<a href="mailto:murraym1@bu.edu">
+  <img src="webicon_email.png" alt="email"
+  style="height:26px;">
+</a>
+<a href="https://www.linkedin.com/in/megan-murray-art-director/" target="_blank">
+  <img src="webicon_linkedin.png" alt="linkedin"
+  style="height:27px;">
+</a>
 </div>
+</div>
+<br></br>
 <div class="container">
 <a href="Amazon.html" class="hover-container">
   <img src="portfolio icons-04.png" alt="Amazon"
@@ -64,12 +75,6 @@
   <img src="art.gif" alt="Drizly"
   style="width:250px;height:206px;">
 </a>
-</div>
-<br></br>
-<hr>
-<div class="footer">
-  <p>(631) 702-3715<br>
-  <a href="mailto:murraym1@bu.edu">murraym1@bu.edu</a></p>
 </div>
 </body>
 </html>
