--- a/resume.html
+++ b/resume.html
@@ -7,36 +7,43 @@
   <title>Resume</title>
 </head>
 <body>
-    <div class="header">
-      <div class="logo">
-          <a href="index.html">
-            <img src="logo.png" alt="logo"
-            style="width:150px;height:125px;">
-          </a>
-    <div class="home">
-        <a href="index.html"><h1>Megan Murray</h1></a>
-      <div class="menu">
-        <a href="index.html"><b>work</b></a>
-      </div>
-      <div class="menu">
-        <a href="about.html"><b>about</b></a>
-      </div>
-      <div class="menu">
-        <a href="resume.html"><b>resume</b></a>
-      </div>
+  <div class="header">
+    <div class="logo">
+        <a href="index.html">
+          <img src="logo.png" alt="logo"
+          style="width:150px;height:125px;">
+        </a>
+  <div class="home">
+      <a href="index.html"><h1>Megan Murray</h1></a>
+    <div class="menu">
+      <a href="index.html"><b>work</b></a>
     </div>
+    <div class="menu">
+      <a href="about.html"><b>about</b></a>
     </div>
+    <div class="menu">
+      <a href="resume.html"><b>resume</b></a>
+    </div>
+  </div>
+  <div class="icons">
+  <a href="mailto:murraym1@bu.edu">
+    <img src="webicon_email.png" alt="email"
+    style="height:26px;">
+  </a>
+  <div class="icon">
+  <a href="https://www.linkedin.com/in/megan-murray-art-director/" target="_blank">
+    <img src="webicon_linkedin.png" alt="linkedin"
+    style="height:27px;">
+  </a>
+</div>
+</div>
+</div>
   </div>
   <div class="items">
     <div class="resume">
       <img src="websiteresume.jpg" alt="resume"
       style="width:100%;">
     </div>
-  </div>
-  <hr>
-  <div class="footer">
-    <p>(631) 702-3715<br>
-    <a href="mailto:murraym1@bu.edu">murraym1@bu.edu</a></p>
   </div>
   </body>
   </html>
