--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <div class="header">
       <a href="index.html">
         <img src="logo.png" alt="logo"
-        style="width:150px;height:125px;">
+        style="width:150px;height:125px;margin-left:10px;">
       </a>
 <div class="home">
     <a href="index.html"><h1>Megan Murray</h1></a>
@@ -35,46 +35,48 @@
 </a>
 </div>
 </div>
-<br></br>
+<div class="big">
 <div class="container">
 <a href="Amazon.html" class="hover-container">
   <img src="portfolio icons-04.png" alt="Amazon"
-  style="width:250px;height:206px;">
+  style="width:330px;">
   <img src="amazon3.gif" alt="Drizly"
-  style="width:250px;height:206px;">
+  style="width:330px;">
 </a>
 <a href="PartnersGlobal.html" class="hover-container">
   <img src="portfolio icons-05.png" alt="Drizly"
-  style="width:250px;height:206px;">
+  style="width:330px;">
   <img src="pg.gif" alt="Drizly"
-  style="width:250px;height:206px;">
+  style="width:330px;">
 </a>
 <a href="LondonPub.html" class="hover-container">
   <img src="portfolio icons-07.png" alt="London Pub GIF"
-  style="width:250px;height:206px;">
+  style="width:330px;">
   <img src="londonpubgif2.gif" alt="Drizly"
-  style="width:250px;height:206px;">
+  style="width:330px;">
 </a>
 </div>
 <div class="container">
 <a href="StubHub.html" class="hover-container">
     <img src="portfolio icons-08.png" alt="Stubhub Gif"
-  style="width:250px;height:206px;">
+  style="width:330px;">
   <img src="stubhub.gif" alt="Drizly"
-  style="width:250px;height:206px;">
+  style="width:330px;">
 </a>
 <a href="DesignForGood.html" class="hover-container">
   <img src="portfolio icons-06.png" alt="Drizly"
-  style="width:250px;height:206px;">
+  style="width:330px;">
   <img src="buddyclub.gif" alt="BuddyClub"
-  style="width:250px;height:206px;">
+  style="width:330px;">
 </a>
 <a href="ArtDesign.html" class="hover-container">
   <img src="portfolio icons-03.png" alt="ArtDesign"
-  style="width:250px;height:206px;">
+  style="width:330px;">
   <img src="art.gif" alt="Drizly"
-  style="width:250px;height:206px;">
+  style="width:330px;">
 </a>
 </div>
+</div>
+<br></br>
 </body>
 </html>
