--- a/ArtDesign.html
+++ b/ArtDesign.html
@@ -11,7 +11,7 @@
     <div class="logo">
         <a href="index.html">
           <img src="logo.png" alt="logo"
-          style="width:150px;height:125px;">
+          style="width:150px;height:125px;margin-left:10px;">
         </a>
   <div class="home">
       <a href="index.html"><h1>Megan Murray</h1></a>
