--- a/DesignForGood.html
+++ b/DesignForGood.html
@@ -10,7 +10,7 @@
   <div class="header">
         <a href="index.html">
           <img src="logo.png" alt="logo"
-          style="width:150px;height:125px;">
+          style="width:150px;height:125px;margin-left:10px;">
         </a>
   <div class="home">
       <a href="index.html"><h1>Megan Murray</h1></a>
@@ -36,8 +36,7 @@
   </div>
   </div>
 <h2><a href="StubHub.html">&lt; &nbsp; </a> Design for Good <a href="ArtDesign.html">&nbsp; &gt;</a></h2>
-<h3>Select one of the nonprofits below to see how I have utilized my adveritinsg
-  and design background to make a valuable contribution to these organizations.</h3>
+<h3>See how I've used graphic design to help make an impact by clicking on one of the nonprofits below!</h3>
 <br></br>
   <div id="wrapper">
     <p><a class="button" href="#popup1"><img src="sub icons-03.png" alt="Art1"
@@ -48,38 +47,39 @@
     style="width:400px;"></a></p>
   </div>
   <br></br>
-      <div class="container">
-        <a href="Amazon.html" class="hover-container">
-          <img src="amazon2.gif" alt="Amazon GIF"
-          style="width:100%;">
-          <img src="portfolio icons-04.png" alt="Amazon Icon"
-          style="width:100%;">
-        </a>
-        <a href="PartnersGlobal.html" class="hover-container">
-          <img src="pg2.gif" alt="Partners Global GIF"
-          style="width:100%;">
-          <img src="portfolio icons-05.png" alt="Partners Global Icon"
-          style="width:100%;">
-        </a>
-      <a href="LondonPub.html" class="hover-container">
-        <img src="lp2.gif" alt="London Pub GIF"
-          style="width:100%;">
-        <img src="portfolio icons-07.png" alt="London Pub Icon"
-          style="width:100%;">
-      </a>
-      <a href="StubHub.html" class="hover-container">
-      <img src="stubhub2.gif" alt="Stubhub Gif"
-          style="width:100%;">
-        <img src="portfolio icons-08.png" alt="Drizly Icon"
-          style="width:100%;">
-      </a>
-      <a href="ArtDesign.html" class="hover-container">
-        <img src="art2.gif" alt="Art GIF"
-          style="width:100%;">
-        <img src="portfolio icons-03.png" alt="Art Icon"
-          style="width:100%;">
-      </a>
-      </div>
+    <br></br>
+  <div class="container">
+    <a href="PartnersGlobal.html" class="hover-container">
+      <img src="portfolio icons-05.png" alt="Drizly"
+      style="width:230px;">
+      <img src="portfolio icons_footer-05.png" alt="Drizly"
+      style="width:230px;">
+    </a>
+  <a href="LondonPub.html" class="hover-container">
+    <img src="portfolio icons-07.png" alt="London Pub GIF"
+      style="width:230px;">
+    <img src="portfolio icons_footer-07.png" alt="Drizly"
+      style="width:230px;">
+  </a>
+  <a href="StubHub.html" class="hover-container">
+      <img src="portfolio icons-08.png" alt="Stubhub Gif"
+      style="width:230px;">
+    <img src="portfolio icons_footer-08.png" alt="Drizly"
+      style="width:230px;">
+  </a>
+  <a href="DesignForGood.html" class="hover-container">
+    <img src="portfolio icons-06.png" alt="Design for Good GIF"
+      style="width:230px;">
+    <img src="portfolio icons_footer-06.png" alt="Design For Good"
+      style="width:230px;">
+  </a>
+  <a href="ArtDesign.html" class="hover-container">
+    <img src="portfolio icons-03.png" alt="Drizly"
+      style="width:230px;">
+    <img src="portfolio icons_footer-03.png" alt="Drizly"
+      style="width:230px;">
+  </a>
+  </div>
   <div id="popup1" class="overlay">
       <div class="popup">
         <img src="BuddyClub-01.png" alt="art1"
