--- a/PartnersGlobal.html
+++ b/PartnersGlobal.html
@@ -11,7 +11,7 @@
     <div class="logo">
         <a href="index.html">
           <img src="logo.png" alt="logo"
-          style="width:150px;height:125px;">
+          style="width:150px;height:125px;margin-left:10px;">
         </a>
   <div class="home">
       <a href="index.html"><h1>Megan Murray</h1></a>
@@ -81,37 +81,37 @@
 </div>
 <br></br>
 <br></br>
-    <div class="container">
-      <a href="Amazon.html" class="hover-container">
-        <img src="amazon2.gif" alt="Amazon GIF"
-        style="width:100%;">
-        <img src="portfolio icons-04.png" alt="Amazon Icon"
-        style="width:100%;">
-      </a>
-      <a href="LondonPub.html" class="hover-container">
-        <img src="lp2.gif" alt="London Pub GIF"
-        style="width:100%;">
-        <img src="portfolio icons-07.png" alt="London Pub"
-        style="width:100%;">
-      </a>
-    <a href="StubHub.html" class="hover-container">
-    <img src="stubhub2.gif" alt="Stubhub Gif"
-        style="width:100%;">
-      <img src="portfolio icons-08.png" alt="Drizly Icon"
-        style="width:100%;">
-    </a>
-    <a href="DesignForGood.html" class="hover-container">
-      <img src="buddyclub.gif" alt="Design for Good GIF"
-        style="width:100%;">
-      <img src="portfolio icons-06.png" alt="Design For Good"
-        style="width:100%;">
-    </a>
-    <a href="ArtDesign.html" class="hover-container">
-      <img src="art2.gif" alt="Art GIF"
-        style="width:100%;">
-      <img src="portfolio icons-03.png" alt="Art Icon"
-        style="width:100%;">
-    </a>
-    </div>
+<div class="container">
+  <a href="Amazon.html" class="hover-container">
+    <img src="portfolio icons-04.png" alt="Drizly"
+    style="width:230px;">
+    <img src="portfolio icons_footer-04.png" alt="Drizly"
+    style="width:230px;">
+  </a>
+<a href="LondonPub.html" class="hover-container">
+  <img src="portfolio icons-07.png" alt="London Pub GIF"
+    style="width:230px;">
+  <img src="portfolio icons_footer-07.png" alt="Drizly"
+    style="width:230px;">
+</a>
+<a href="StubHub.html" class="hover-container">
+    <img src="portfolio icons-08.png" alt="Stubhub Gif"
+    style="width:230px;">
+  <img src="portfolio icons_footer-08.png" alt="Drizly"
+    style="width:230px;">
+</a>
+<a href="DesignForGood.html" class="hover-container">
+  <img src="portfolio icons-06.png" alt="Design for Good GIF"
+    style="width:230px;">
+  <img src="portfolio icons_footer-06.png" alt="Design For Good"
+    style="width:230px;">
+</a>
+<a href="ArtDesign.html" class="hover-container">
+  <img src="portfolio icons-03.png" alt="Drizly"
+    style="width:230px;">
+  <img src="portfolio icons_footer-03.png" alt="Drizly"
+    style="width:230px;">
+</a>
+</div>
 </body>
 </html>
